# TP_PYTHON_BDD

./: README.md  bdd.py  cert.pem  delete.py  key.pem  pyproject.toml
static/css/: style.css
templates/: add_avis.html  add_boisson.html  add_clients.html  add_commande.html  add_menu.html  add_plat.html  index.html
